<resources>
    <string name="app_name">NeWork</string>
    <string name="posts">Posts</string>
    <string name="events">Events</string>
    <string name="users">Users</string>
    <string name="add_post">Add post</string>
    <string name="add_event">Add event</string>
    <string name="author_avatar">Author avatar</string>
    <string name="user_avatar">User avatar</string>
    <string name="error_loading">Error loading data</string>
    <string name="retry_loading">Retry</string>
    <string name="attachment">Attachment</string>
    <string name="add_job">Add job</string>
    <string name="sign_in_to_create">You need to sign in to create content</string>
    <string name="action_sign_in">Sign In</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="image_picker_error">Image picker error</string>
    <string name="error_loading_failed">Failed to load data</string>
    <string name="save">Save</string>
    <string name="speakers">Speakers</string>
    <string name="participants">Participants</string>
    <string name="unsupported_media_type">Unsupported media type</string>
    <string name="SignInFragment">Sign In Fragment</string>
    <string name="SignUpFragment">Sign Up Fragment</string>
    <string name="UserDetailsFragment">User Details Fragment</string>
    <string name="sign_in">Log In</string>
    <string name="sign_up">Registration</string>
    <string name="logout">Log Out</string>
    <string name="profile">Profile</string>
    <string name="share">Share</string>
    <string name="choose_image_source">Choose image source</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>

    <string name="home">Home</string>
    <string name="enter_event_text_hint">Enter event text</string>
    <string name="author_job_hint">Author job</string>
    <string name="clear">Clear</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="event_image_preview">Event image preview</string>
    <string name="enter_post_text_hint">Enter post text</string>
    <string name="enter_author_job_hint">Enter author job</string>
    <string name="post_image_preview">Post image preview</string>
    <string name="new_post">New Post</string>
    <string name="new_event">New Event</string>
    <string name="more_options">More options</string>
    <string name="like_button">Like button</string>
    <string name="participate_button">Participate button</string>
    <string name="no_data_yet">No data yet</string>
    <string name="company_hint">Company</string>
    <string name="position_hint">Position</string>
    <string name="start_date_hint">Start Date</string>
    <string name="end_date_optional_hint">End Date (optional)</string>
    <string name="login_hint">Login</string>
    <string name="password_hint">Password</string>
</resources>