<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/common_padding"
    android:fitsSystemWindows="true"
    tools:context=".ui.fragment.NewJobFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/companyLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/company_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/company"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/positionLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_margin_small"
        android:hint="@string/position_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/position"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/startLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_margin_small"
        android:hint="@string/start_date_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/endLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_margin_small"
        android:hint="@string/end_date_optional_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_padding"
        android:text="@string/save" />

</LinearLayout>