<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/common_padding"
    android:fitsSystemWindows="true"
    tools:context=".ui.fragment.NewEventFragment">


    <EditText
        android:id="@+id/event_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:gravity="top"
        android:hint="@string/enter_event_text_hint"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/author_job"
        android:layout_marginBottom="@dimen/common_margin_small"/>

    <EditText
        android:id="@+id/author_job"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_margin_small"
        android:hint="@string/author_job_hint"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toBottomOf="@id/event_text"/>

    <FrameLayout
        android:id="@+id/preview_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_margin_small"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/author_job"
        app:layout_constraintBottom_toTopOf="@+id/type_group"
        android:layout_marginBottom="@dimen/common_margin_small"
        tools:visibility="visible">

        <ImageView
            android:id="@+id/preview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/event_image_preview"
            tools:src="@tools:sample/avatars" />

        <Button
            android:id="@+id/clear_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:text="@string/clear" />

    </FrameLayout>

    <RadioGroup
        android:id="@+id/type_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/preview_container"
        app:layout_constraintBottom_toTopOf="@id/map"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/online_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/online" />

        <RadioButton
            android:id="@+id/offline_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/offline" />

    </RadioGroup>

    <com.yandex.mapkit.mapview.MapView
        android:id="@+id/map"
        android:layout_width="0dp"
        android:layout_height="@dimen/map_view_height"
        android:layout_marginTop="@dimen/common_margin_small"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/type_group"
        tools:visibility="visible" >

    </com.yandex.mapkit.mapview.MapView>

    <Button
        android:id="@+id/clear_location_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        app:layout_constraintEnd_toEndOf="@id/map"
        app:layout_constraintTop_toTopOf="@id/map" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/new_item_bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/new_event_bottom_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>

